--- a/index.htm
+++ b/index.htm
@@ -752,7 +752,7 @@ for (var attr in meta) {
   style="--ratio: 1.4128035320088301; --preview-ratio: 1.4128035320088301;"
 >
   <noscript><div class="product__media media">
-        <img src="https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png" alt="" srcset="https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png" width="1946" height="1377" loading="lazy" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
+        <img src="https://s13.gifyu.com/images/SCspN.webp" alt="" srcset="https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp" width="1946" height="1377" loading="lazy" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
       </div></noscript>
 
   <modal-opener class="product__modal-opener product__modal-opener--image no-js-hidden" data-modal="#ProductModal-template--16994524135589__featured_product_F3AMP6">
@@ -786,7 +786,7 @@ for (var attr in meta) {
   </svg>
 </div>
 <div class="product__media media media--transparent">
-      <img src="https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png" alt="" srcset="https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png, https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png" width="1946" height="1377" loading="lazy" class="image-magnify-lightbox" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
+      <img src="https://s13.gifyu.com/images/SCspN.webp" alt="" srcset="https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp, https://s13.gifyu.com/images/SCspN.webp" width="1946" height="1377" loading="lazy" class="image-magnify-lightbox" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
     </div>
     <button class="product__media-toggle quick-add-hidden product__media-zoom-lightbox" type="button" aria-haspopup="dialog" data-media-id="28154297680037">
       <span class="visually-hidden">
@@ -988,9 +988,9 @@ for (var attr in meta) {
     >
 <img
     class="global-media-settings global-media-settings--no-shadow"
-    srcset="https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png&width=550 550w,https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png 640w"
+    srcset="https://s13.gifyu.com/images/SCspN.webp&width=550 550w,https://s13.gifyu.com/images/SCspN.webp 640w"
     sizes="(min-width: 750px) calc(100vw - 22rem), 1100px"
-    src="https://6naee6208lju7p8k-86460268830.shopifypreview.com/cdn/shop/files/slotgacorunikbet.png&width=1445"
+    src="https://s13.gifyu.com/images/SCspN.webp&width=1445"
     alt="MANIS77 ⚡ SITUS SLOT GACOR ONLINE DAN TOGEL TERBAIK"
     loading="lazy"
     width="1100"
